[tool.poetry]
name = "projecthopper"
version = "0.1.0"
description = ""
authors = ["Justin Leighton <justinthomas.leighton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.2"
typer = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
